# magsag

./: .env.example  .eslintrc.cjs  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  PLANS.md  PUBLISHING.md  README.md  SSOT.md  eslint.config.js  magsag-self  merge-train.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  run-parallel-fixes.sh  tsconfig.base.json  tsconfig.json  turbo.json  vitest.config.ts
.changeset/: config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  sandbox-check.yml  ts-ci.yml
.mcp/: README.md
.mcp/servers/: fetch.json  fetch.yaml  git.yaml  github.json  github.yaml  memory.json  notion.json  obsidian.yaml  pg-readonly.json  supabase.yaml
apps/demo-api/: package.json
apps/demo-cli/: package.json  tsconfig.json
benchmarks/: README.md
catalog/_schemas/: agent.schema.json  skill.schema.json
catalog/policies/: mcp_permissions.yaml
catalog/registry/: agents.yaml  skills.yaml
docs/: approval.md  durable-run.md  handoff.md  mcp.md  memory.md  storage.md
docs/_templates/: document.md  execplan.md
docs/architecture/: agents.md  plans.md  skills.md  ssot.md
docs/development/: PLANS.md  changelog.md  contributing.md  roadmap.md  validation-memo.md  worktrees.md
docs/governance/: frontmatter.md  style.md  taxonomy.md
docs/guides/: a2a-communication.md  agent-development.md  api-usage.md  cost-optimization.md  github-integration.md  mcp-integration.md  mcp-migration.md  mcp-server.md  migration.md  moderation.md  multi-provider.md  runner-integration.md  semantic-cache.md
docs/policies/: code-of-conduct.md  security.md
docs/workflows/: changelog.md  plans.md
examples/api/: github_actions.yml
ops/adk/: catalog.yaml
ops/scripts/: check_package_size.mjs
ops/tools/: verify-vendor.ts  verify_vendor.py
policy/: default.policy.yaml
runners/: sandbox-runner.ts
sandbox/: seccomp.profile.json
scripts/: preflight.ts  sandbox-entry.sh
servers/: index.ts  package.json
servers/fetch/: index.ts  request.ts
servers/filesystem/: index.ts  list-entries.ts  read-text.ts  write-text.ts
servers/github/: index.ts  list-issues.ts
servers/memory/: index.ts  retrieve.ts  search.ts  store.ts
servers/notion/: index.ts  retrieve-page.ts
servers/obsidian/: append-note.ts  index.ts
servers/pg-readonly/: index.ts  query.ts
servers/supabase/: index.ts  sql-select.ts
skills/doc-gen/: SKILL.md
skills/github-issue-triage/: SKILL.md
skills/notion-page-lookup/: SKILL.md
skills/obsidian-note-append/: SKILL.md
skills/result-aggregation/: SKILL.md
skills/salary-band-lookup/: SKILL.md
skills/supabase-sql-readonly/: SKILL.md
skills/task-decomposition/: SKILL.md
skills/test-helper-transform/: SKILL.md
src/magsag/: cli.py  registry.py  settings.py
tests/: conftest.py  test_cli.py
tests/agents/: test_compensation_advisor_sag_fast.py  test_offer_orchestrator_mag_fast.py
tests/api/: test_agents_external_handoff.py
tests/cli/: test_agent_cli.py
tests/golden/: README.md
tests/integration/: test_api_agent_runtime.py
tests/mcp/: test_errors.py  test_execution.py  (+3 more)
tools/: check-docs.ts  check_package_size.mjs  pdca.mjs  postinstall-build.mjs  preflight.ts  prepare-for-publish.mjs  validate-catalog.ts  verify-vendor.ts
(+182 files in other folders)
